Fix blog post test margins (=center-align).

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,7 +51,6 @@ main {
   padding: 0.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
-  margin: 0.5rem;
 }
 
 .blog-post pre {
